=== Deluge 1.3.0-rc2 (In Development) ===
==== ConsoleUI ====
	* #1307: Fix not being able to add torrents
	* #1293: Fix not being able to add paths that contain backslashes

==== Execute ====
	* #1306: Fix always executing last event

=== Deluge 1.3.0-rc1 (08 May 2010) ===
==== Core ====
	* Implement #1063 option to delete torrent file copy on torrent removal - patch from Ghent
	* Implement #457 progress bars for folders
	* Implement #1012 httpdownloader supports gzip decoding
	* #496: Remove deprecated functions in favour of get_session_status()
	* #1112: Fix renaming files in add torrent dialog
	* #1247: Fix deluge-gtk from hanging on shutdown
	* #995: Rewrote tracker_icons
	* Add AutoAdd plugin
	* Add Notifications plugin

==== GtkUI ====
	* Use new SessionProxy class for caching torrent status client-side
	* Use torrent status diffs to reduce RPC traffic

==== Blocklist ====
	* Implement local blocklist support
	* #861: Pause transfers until blocklist is imported
	* Fix redirection not working with relative paths

==== Execute ====
	* Fix running commands with the TorrentAdded event
	* Fix the web interface

==== Label ====
	* Fix the web interface  (#733)

==== Web ====
	* Migrate to ExtJS 3.1
	* Add gzip compression of HTTP data to the server
	* Improve the efficiency of the TorrentGrid with lots of torrents (#1026)
	* Add a base parameter to allow reverse proxying (#1076)
	* Fix showing all the peers in the details tab (#1054)
	* Fix uploading torrent files in Opera or IE (#1087)
	* Complete IE support

=== Deluge 1.2.0 - "Bursting like an infected kidney" (10 January 2010) ===
==== Core ====
	* Implement new RPC protocol DelugeRPC replacing XMLRPC
	* Move to a twisted framework
	* Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
	* Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
	* Remove SignalReceiver