@@ -1,4 +1,7 @@
 === Deluge 1.3.0-rc2 (In Development) ===
+==== Core ====
+	* Fix tracker_icons failing on windows
+
 ==== ConsoleUI ====
 	* #1307: Fix not being able to add torrents
 	* #1293: Fix not being able to add paths that contain backslashes
